--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Jeffrey Willard - Portfolio Website</title>
+        <title>Jeffrey Willard - Portfolio</title>
         <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
