--- a/index.html
+++ b/index.html
@@ -44,16 +44,13 @@
                 <img src="img/jeff-willard-png.png" class="profile__portrait" alt="Jeffrey Willard Portrait" />
                 <h1>Hello World!</h1>
                 <p>My name is Jeffrey Willard. I am a <span>web</span> development student from Florida</p>
-                <a href="#">Check out some of my code</a>
+                <br />
+                <br />
+                <div>
+                    <a href="https://github.com/luckys3000/portfolio-website" class="button" target="_blank">Check out some of my code</a>
+                </div>
             </div>
             <br />
-
-            <div>
-                <!--This is a test link and test button with styling added for practice-->
-                <a href="#">Default Link</a>
-                <button type="button">Default Button</button>
-                <button class="button__secondary">Secondary Button</button>
-            </div>
         </main>
 
         <footer class="page-footer">
