--- a/about.html
+++ b/about.html
@@ -41,12 +41,16 @@
         <main>
             <div class="about-me">
                 <h1>About Me</h1>
-                <p>This page is about myself. This is what I enjoy doing:</p>
+                <p>
+                    I've spent too many years doing the wrong job because someone once told me I was good at sales. Thanks to the help and guidance of my partner and my friends, I'm finally pursuing a
+                    career that brings me joy and a sense of accomplishment.
+                </p>
+                <p>When I'm not learing to become a Full-Stack Developer or writing code, I enjoy:</p>
                 <ul>
-                    <li class="navigation-list">Front-end development</li>
-                    <li class="navigation-list">Back-end development</li>
-                    <li class="navigation-list">Test driven development</li>
-                    <li class="navigation-list">Climbing</li>
+                    <li class="navigation-list">Running</li>
+                    <li class="navigation-list">DIY home improvement projects</li>
+                    <li class="navigation-list">Goombay Smash on the beach</li>
+                    <li class="navigation-list">Spending time with friends and family</li>
                 </ul>
                 <br />
                 <a href="files/Jeff Willard Resume 2024 PDF.pdf" class="button" target="_blank" download>Download my Resume</a>
