--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <main>
             <div class="profile">
-                <img src="img/jeff-willard-png.png" class="profile__portrait" alt="Jeffrey Willard Portrait" />
+                <img src="img/jeff-willard-png v2.png" class="profile__portrait" alt="Jeffrey Willard Portrait" />
                 <h1>Hello World!</h1>
                 <p>My name is Jeffrey Willard. I am a <span>web</span> development student from Florida</p>
                 <br />
