--- a/contact.html
+++ b/contact.html
@@ -1,86 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Jeffrey Willard - Portfolio Website</title>
+        <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico" />
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="css/style.production.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jeffrey Willard - Portfolio Website</title>
-    <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico" />
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="css/style.production.css" />
-</head>
-
-<body>
-    <!--Header including the logo and the main -->
-    <header class="page-header">
-        <img src="img/jpw_codes_blue_logo_80px.svg"
-            alt="Personal logo of Jeffrey Willard consisting of text and a symbol.  The symbol is centered at the top
+    <body>
+        <!--Header including the logo and the main -->
+        <header class="page-header">
+            <img
+                src="img/jpw_codes_blue_logo_80px.svg"
+                alt="Personal logo of Jeffrey Willard consisting of text and a symbol.  The symbol is centered at the top
               and the text is centered below they symbol running vertically with JPW in uppercase lettering followed by the word Codes"
-            class="page-header__item" />
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-                </li>
-                <li role="presentation">
-                    <a href="about.html" role="menuitem" class="navigation-list__item"
-                        aria-label="Webpage providing information about Jeffrey Willard">About</a>
-                </li>
-                <li role="presentation">
-                    <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
-                </li>
+                class="page-header__item" />
+            <nav class="main-navigation page-header__item">
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation">
+                        <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" role="menuitem" class="navigation-list__item" aria-label="Webpage providing information about Jeffrey Willard">About</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+                    </li>
 
-                <li role="presentation">
-                    <a href="contact.html" role="menuitem"
-                        class="navigation-list__item navigation-list__item--active">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <form action="" method="post" id="contact-form">
-            <label class="standard-label" for="contact-email">E-mail: </label>
-            <input type="email" id="contact-email" required />
-            <br />
-            <label class="standard-label" for="contact-telephone">Telephone: </label>
-            <input type="tel" id="contact-telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" />
-            <br />
-            <label class="standard-label" for="contact-message">Message:</label>
-            <textarea maxlength="240" id="contact-message" required></textarea>
-            <br />
-            <br />
-            <input type="submit" value="Send message" />
-        </form>
+                    <li role="presentation">
+                        <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <form action="" method="post" id="contact-form">
+                <label class="standard-label" for="contact-email">E-mail: </label>
+                <input type="email" id="contact-email" required />
+                <br />
+                <label class="standard-label" for="contact-telephone">Telephone: </label>
+                <input type="tel" id="contact-telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" />
+                <br />
+                <label class="standard-label" for="contact-message">Message:</label>
+                <textarea maxlength="240" id="contact-message" required></textarea>
+                <br />
+                <br />
+                <input type="submit" value="Send message" />
+            </form>
 
-        <div>
-            <h1>Jeffrey Willard</h1>
-            1014 E. Mallory Street<br />
-            Pensacola, FL. 32503<br />
-            <a href="tel:+1 850 429 1265">Tel: +1 850 429 1265</a>
-            <br />
-            <a href="mailto:inquiry@396willard.com">Email: inquiry@396willard.com</a>
-        </div>
-    </main>
-    <footer class="page-footer">
-        <p>Find me on</p>
-        <div class="social-media">
-            <!--Github logo-->
-            <a href="https://www.github.com" target="_blank"> <img
-                    src="img/317712_code_repository_github_repository_resource_icon.svg" alt="Github logo" /></a>
-            <!--Twitter logo-->
-            <a href="https://www.twitter.com" target="_blank"><img
-                    src="img/317723_social_media_tweet_twitter_social_icon.svg" alt="X formerly Twitter logo" /></a>
-            <!--LinkedIn logo-->
-            <a href="https://www.linkedin.com/in/luckys3000/" target="_blank"><img
-                    src="img/4102586_applications_linkedin_social_social_media_icon.svg" alt="Linkedin logo" /></a>
-        </div>
-    </footer>
-    <script src="js/tota11y.min.js"></script>
-</body>
-
+            <div>
+                <h1>Jeffrey Willard</h1>
+                1014 E. Mallory Street<br />
+                Pensacola, FL. 32503<br />
+                <a href="tel:+1-850-429-1265">Tel: +1 850 429 1265</a>
+                <br />
+                <a href="mailto:inquiry@396willard.com">Email: inquiry@396willard.com</a>
+            </div>
+        </main>
+        <footer class="page-footer">
+            <p>Find me on</p>
+            <div class="social-media">
+                <!--Github logo-->
+                <a href="https://www.github.com" target="_blank"> <img src="img/317712_code_repository_github_repository_resource_icon.svg" alt="Github logo" /></a>
+                <!--Twitter logo-->
+                <a href="https://www.twitter.com" target="_blank"><img src="img/317723_social_media_tweet_twitter_social_icon.svg" alt="X formerly Twitter logo" /></a>
+                <!--LinkedIn logo-->
+                <a href="https://www.linkedin.com/in/luckys3000/" target="_blank"><img src="img/4102586_applications_linkedin_social_social_media_icon.svg" alt="Linkedin logo" /></a>
+            </div>
+        </footer>
+        <script src="js/tota11y.min.js"></script>
+    </body>
 </html>
