feat: replace resume download
Replace resume download with LinkedIn profile link

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     <li class="navigation-list">Spending time with friends and family</li>
                 </ul>
                 <br />
-                <a href="files/Jeff_Willard_Resume_2024_PDF.pdf" class="button" target="_blank" download>Download my Resume</a>
+                <a href="https://www.linkedin.com/in/luckys3000/" target="_blank" class="button">Connect with me on LinkedIn</a>
             </div>
             <br />
             <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
