style: update about.html
Update text in the about me section

--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
             <div class="about-me">
                 <h1>About Me</h1>
                 <p>
-                    I've spent too many years doing the wrong job because someone once told me I was good at sales. Thanks to the help and guidance of my partner and my friends, I'm finally pursuing a
-                    career that brings me joy and a sense of accomplishment.
+                    I've wasted years in the wrong jobs, thinking they were what I was supposed to do. With the support and guidance of my partner and friends, I am finally pursuing a career that
+                    brings me joy and fulfillment.
                 </p>
                 <p>When I'm not learing to become a Full-Stack Developer or writing code, I enjoy:</p>
                 <ul>
