feat: add goombay smash html link
Add html link to Goombay Smash Wikipedia page for increased functionality

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                 <ul>
                     <li class="navigation-list">Running</li>
                     <li class="navigation-list">DIY home improvement projects</li>
-                    <li class="navigation-list">Goombay Smash on the beach</li>
+                    <li class="navigation-list"><a href="https://en.wikipedia.org/wiki/Goombay_Smash" target="_blank">Goombay Smash</a> on the beach</li>
                     <li class="navigation-list">Spending time with friends and family</li>
                 </ul>
                 <br />
