feat: update footer github link
Update footer GitHub link to point to personal GitHub page

--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
             <p>Find me on</p>
             <div class="social-media">
                 <!--Github logo-->
-                <a href="https://www.github.com" target="_blank"> <img src="img/317712_code_repository_github_repository_resource_icon.svg" alt="Github logo" /></a>
+                <a href="https://github.com/luckys3000/portfolio-website" target="_blank"> <img src="img/317712_code_repository_github_repository_resource_icon.svg" alt="Github logo" /></a>
                 <!--Twitter logo-->
                 <a href="https://www.twitter.com" target="_blank"><img src="img/317723_social_media_tweet_twitter_social_icon.svg" alt="X formerly Twitter logo" /></a>
                 <!--LinkedIn logo-->
