docs: improve wording on about.html
 - Improve wording on about.html regarding previous experience

--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
             <div class="about-me">
                 <h1>About Me</h1>
                 <p>
-                    I've wasted years in the wrong jobs, thinking they were what I was supposed to do. With the support and guidance of my partner and friends, I am finally pursuing a career that
-                    brings me joy and fulfillment.
+                With a solid background in selling and marketing technology solutions, I recently uncovered a strong aptitude and passion for software development.
+                Thanks to the unwavering support and guidance from my partner and friends, I am now dedicated to pursuing a career that truly brings me joy and fulfillment.
                 </p>
                 <p>When I'm not learing to become a Full-Stack Developer or writing code, I enjoy:</p>
                 <ul>
